@@ -3,14 +3,19 @@ MD5 18a263088434b1618a2ee98bee5a63ad files/eselect-emacs-0.3-r119.patch 1604
 RMD160 85df32ebf5d383056f641e829fe8fbc63688d2bc files/eselect-emacs-0.3-r119.patch 1604
 SHA256 1eff3f70f532430f9314de674e95a978a49e918f1b2b507871c51a56201dbe0e files/eselect-emacs-0.3-r119.patch 1604
 DIST eselect-emacs-0.5.tar.bz2 18012 RMD160 7792694a73f5e9df60edf6e523072d9dc6a61641 SHA1 ae6bfe84b3d0e995308fe35a336f18136c457228 SHA256 8aa1f5df228aa764dbdfd41a2ac8f5745c4bfbb3d6a5caa28b189c47daea7e5e
+DIST eselect-emacs-0.6.tar.bz2 18028 RMD160 e959c1961c8239ef89e70d91f2acc5e492a8ec6e SHA1 84a2b8ad383a35891d7e03f52a888a37538c7d5b SHA256 1aebce57d260370161cc3b429d7d8d9e364e9ff7d750e3f514e1566ebd23faec
 EBUILD eselect-emacs-0.5.ebuild 731 RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 SHA1 15d124fbb2fd978dbc8961f976edf5998f958be5 SHA256 2ddfe609563e812587a622b4eaf7b018e8f38482d53b928418c2a83686259ea2
 MD5 727cd3ce6ef35cf62e2fa8be48783170 eselect-emacs-0.5.ebuild 731
 RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 eselect-emacs-0.5.ebuild 731
 SHA256 2ddfe609563e812587a622b4eaf7b018e8f38482d53b928418c2a83686259ea2 eselect-emacs-0.5.ebuild 731
-MISC ChangeLog 2944 RMD160 5c42694e94343fe532a0b3469360f843474f7a13 SHA1 471196f6e990b64e26dc1a7f1e8596617dc57249 SHA256 54b33e7931fb37a36fe8cb15d3784f90deb4390138c3358d81135c5b0633eb82
-MD5 e365b926813850b421db821b9d05ef78 ChangeLog 2944
-RMD160 5c42694e94343fe532a0b3469360f843474f7a13 ChangeLog 2944
-SHA256 54b33e7931fb37a36fe8cb15d3784f90deb4390138c3358d81135c5b0633eb82 ChangeLog 2944
+EBUILD eselect-emacs-0.6.ebuild 731 RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 SHA1 15d124fbb2fd978dbc8961f976edf5998f958be5 SHA256 2ddfe609563e812587a622b4eaf7b018e8f38482d53b928418c2a83686259ea2
+MD5 727cd3ce6ef35cf62e2fa8be48783170 eselect-emacs-0.6.ebuild 731
+RMD160 aa852751de38178de1072f5b521b1cca1aecbae3 eselect-emacs-0.6.ebuild 731
+SHA256 2ddfe609563e812587a622b4eaf7b018e8f38482d53b928418c2a83686259ea2 eselect-emacs-0.6.ebuild 731
+MISC ChangeLog 3219 RMD160 a9ee9dfe9b45acd00eb914f5d93dff3645960dc1 SHA1 9de8fadfdaac980fd8035dfc84d2eb12b109e645 SHA256 ce103682914d647b7b9ad97ab2e933f6a91edd3fd666e498815fbd27b6ef13ce
+MD5 b79e67e2516e275af6d550f54109d7bd ChangeLog 3219
+RMD160 a9ee9dfe9b45acd00eb914f5d93dff3645960dc1 ChangeLog 3219
+SHA256 ce103682914d647b7b9ad97ab2e933f6a91edd3fd666e498815fbd27b6ef13ce ChangeLog 3219
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -18,3 +23,6 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 e13f361e3ad858a5f45afda7aee22d75 files/digest-eselect-emacs-0.5 253
 RMD160 fceb377ae77d02dbe48084cd20d7e2f7542f7bb6 files/digest-eselect-emacs-0.5 253
 SHA256 6289a266e5a2bd2ef259f6cd8eec0c4400755c08b193781f4135d125322a0f5d files/digest-eselect-emacs-0.5 253
+MD5 6445ccb21cefa295354d0188abb45ca4 files/digest-eselect-emacs-0.6 253
+RMD160 671322e7913c3c4719bd43112a42cb67b122ebd2 files/digest-eselect-emacs-0.6 253
+SHA256 bf3c3c51ff5f64c8ba457ac72ae1e0d4dacc9fcac19f1d484b9cb7aad3661fe0 files/digest-eselect-emacs-0.6 253
