@@ -1,0 +1,3 @@
+MD5 4a0f644f746ff4a5194eb97fdf22bbba eselect-emacs-0.6.tar.bz2 18028
+RMD160 e959c1961c8239ef89e70d91f2acc5e492a8ec6e eselect-emacs-0.6.tar.bz2 18028
+SHA256 1aebce57d260370161cc3b429d7d8d9e364e9ff7d750e3f514e1566ebd23faec eselect-emacs-0.6.tar.bz2 18028
