@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  +eselect-emacs-0.6.ebuild:
+  Removed -n option in emacsclient.desktop. Call env-update to update the
+  environment from env.d files. Brought do_set and do_update more in line.
+  Check for root in do_set and do_update. Redundant remove_symlinks removed.
+
   26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   -eselect-emacs-0.3.ebuild, -eselect-emacs-0.3-r2.ebuild,
   -eselect-emacs-0.4.ebuild:
@@ -16,8 +22,6 @@
   -eselect-emacs-0.1.ebuild, -eselect-emacs-0.2.ebuild,
   eselect-emacs-0.4.ebuild:
   Update desktop database. Old versions removed.
-
-*eselect-emacs-0.4 (22 Mar 2007)
 
   22 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   +eselect-emacs-0.4.ebuild:
